@@ -48,8 +48,6 @@ def run(b, dm_guess, mo_guess, ci=None):
         ncas = {'A1g' : 2, 'E1gx' : 1, 'E1gy' : 1, 'E2gx' : 1, 'E2gy' : 1,
                 'A1u' : 2, 'E1ux' : 1, 'E1uy' : 1, 'E2ux' : 1, 'E2uy' : 1}
         mo_guess = mcscf.sort_mo_by_irrep(mc, mf.mo_coeff, ncas, ncore)
-    else:
-        mo_guess = mcscf.project_init_guess(mc, mo_guess)
 
 # Projection may destroy the spatial symmetry of the MCSCF orbitals.
         try:
