@@ -7,15 +7,9 @@ from pyscf import mcscf
 '''
 Scan HF molecule singlet state dissociation curve.
 
-CASSCF initial guess are generated by two functions: sort_mo and
-project_init_guess.  At beginning, we selected the active space instead of the
-default canonical Hartree-Fock HOMO LUMO orbitals because of the orbital
-symmetry.  It was done by sort_mo function.  In the following calculation for
-each single point on the enregy curve, the CASSCF wavefunction may be sensitive
-to the initial guess.  One method to provide the right initial guess is to
-project the wavefunction from closed points.  It was done by project_init_guess
-function.  Actually project_init_guess function allows transforming any
-orbitals to the current system.
+CASSCF initial guess is generated by sort_mo function.  At beginning, we
+selected the active space instead of the default canonical Hartree-Fock HOMO
+LUMO orbitals because of the orbital symmetry.
 '''
 
 ehf = []
@@ -39,8 +33,6 @@ def run(b, dm, mo):
     if mo is None:
         # initial guess for b = 0.7
         mo = mcscf.sort_mo(mc, mf.mo_coeff, [3,4,5,6,8,9])
-    else:
-        mo = mcscf.project_init_guess(mc, mo)
     e1 = mc.mc1step(mo)[0]
     emc.append(e1)
     return mf.make_rdm1(), mc.mo_coeff
